--- a/Docker_2/nginx/Dockerfile
+++ b/Docker_2/nginx/Dockerfile
@@ -8,7 +8,7 @@ COPY certs/selfsigned.key /etc/ssl/private/selfsigned.key
 COPY nginx.conf /etc/nginx/nginx.conf
 
 
-COPY static /usr/share/nginx/html
+COPY Docker_2/nginx/static /usr/share/nginx/html
 
 
 CMD ["nginx", "-g", "daemon off;"]
